# interconnection

./: .gitignore  README.md  presentation.html  presentation.pptx  pyproject.toml  requirements.txt  ~$presentation.pptx
data/: README.md
docs/: final_report.md  presentation_outline.md  project_context.md
outputs/: analysis_brief.md  metrics.json  model_comparison.csv
scripts/: html_to_pptx.py  prepare_lbnl_data.py
src/interconnection_ml/: __init__.py  data.py  evaluate.py  features.py  models.py  run_pipeline.py
