[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "interconnection-queue-intelligence"
version = "0.1.0"
description = "CEE 498 MLC project for interconnection queue prediction with a PINN-style monotonic cost model."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "openpyxl",
  "scikit-learn",
  "matplotlib",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
